--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -6,13 +6,61 @@
         <title>Phelton's Personal Site</title>
     </head>
     <body>
-        <h1>Phelton Petit-Frere</h1>
-        <em>Founder of <strong>PSA Services</strong></em>
-        <p>I am a broke Web Developer.  </p>
+        <table  cellspacing="20">
+            <tr>
+                <td><img src="Screenshot 2023-03-28 203003-modified.png" alt=""></td>
+                <td>
+                    <h1>Phelton Petit-Frere</h1>
+                    <em>Founder of
+                        <a href="https://psadesigns.org/">
+                            <strong>PSA Services</strong>
+                        </a>
+                    </em>
+                    <p>I am a aspiring Web Developer.</p>
+                </td>
+            </tr>
+        </table>
+
         <hr>
         <h3>Education</h3>
-        <li>Laura Anderson Primary (Dropped out at age 12)</li>
-        <li>Currently Studying at "How to not be broke" University</li>
-        <li></li>
+        <ul>
+            <li>Laura Anderson Primary (Dropped out at age 12)</li>
+            <li>Currently Studying at "How to not be broke" University</li>
+        </ul>
+        <h3>Work Experience</h3>
+        <table>
+            <thead>
+                <th>Dates</th>
+                <th>Work</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1964-2009</td>
+                    <td>Getting Pots</td>
+                </tr>
+                <tr>
+                    <td>2009-2023</td>
+                    <td>Coooking</td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>Skills</h3>
+        <table border="1">
+            <tr>
+                <td>HTML</td>
+                <td>⭐⭐⭐⭐</td>
+                <td>Javascript</td>
+                <td>⭐</td>
+            </tr>
+            <tr>
+                <td>CSS</td>
+                <td>⭐⭐⭐</td>
+                <td>Russ</td>
+                <td>⭐</td>
+            </tr>
+        </table>
+        <hr>
+        <a href="hobbies.html">,My Hobbies</a>
+        <a href="contact.html">Contact Info</a>
     </body>
 </html>
