--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -27,6 +27,7 @@
             <li>Laura Anderson Primary (Dropped out at age 12)</li>
             <li>Currently Studying at "How to not be broke" University</li>
         </ul>
+        <hr>
         <h3>Work Experience</h3>
         <table>
             <thead>
@@ -44,6 +45,7 @@
                 </tr>
             </tbody>
         </table>
+        <hr>
         <h3>Skills</h3>
         <table border="1">
             <tr>
@@ -55,8 +57,8 @@
             <tr>
                 <td>CSS</td>
                 <td>⭐⭐⭐</td>
-                <td>Russ</td>
-                <td>⭐</td>
+                <td>Wordpress</td>
+                <td>⭐⭐</td>
             </tr>
         </table>
         <hr>
