--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact info</title>
-</head>
-<body>
-    <h1>My Contact Info</h1>
-    <p>My Fictional Address</p>
-    <p>03190413</p>
-    <p>myemail@email.com</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contact info</title>
+    </head>
+    <body>
+        <h1>My Contact Info</h1>
+        <p>My Fictional Address</p>
+        <p>03190413</p>
+        <p>myemail@email.com</p>
+
+        <form action="">
+            <label for="">Your Name:</label>
+            <input type="text" name="" id="">
+            <input type="submit" name="" id="">
+        </form>
+    </body>
 </html>
