--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -10,10 +10,14 @@
         <p>My Fictional Address</p>
         <p>03190413</p>
         <p>myemail@email.com</p>
-
-        <form action="">
+        <hr>
+        <form action="mailto:pheltonkpetit@gmail.com" enctype="text/plain">
             <label for="">Your Name:</label>
-            <input type="text" name="" id="">
+            <input type="text" name="yourName" id=""><br>
+            <label for="">Your Email:</label>
+            <input type="email" name="yourEmail" id=""><br>
+            <label for="">Your Message:</label><br>
+            <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
             <input type="submit" name="" id="">
         </form>
     </body>
