--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -4,8 +4,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Phelton's Personal Site</title>
+
+        <style>
+            hr {
+                background-color: #AEDEFC;
+                border-style: none;
+                height: 2px;
+                width: 4%;
+                border-top: dotted 9px;
+                background: transparent;
+            }
+        </style>
+
     </head>
-    <body>
+    <body bgcolor="#FFDFDF">
         <table  cellspacing="20">
             <tr>
                 <td><img src="Screenshot 2023-03-28 203003-modified.png" alt=""></td>
