--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -4,20 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Phelton's Personal Site</title>
-
-        <style>
-            hr {
-                background-color: #AEDEFC;
-                border-style: none;
-                height: 2px;
-                width: 4%;
-                border-top: dotted 9px;
-                background: transparent;
-            }
-        </style>
+        <link rel="stylesheet" href="CSS/styles.css">
 
     </head>
-    <body bgcolor="#FFDFDF">
+    <body>
         <table  cellspacing="20">
             <tr>
                 <td><img src="Screenshot 2023-03-28 203003-modified.png" alt=""></td>
